tests/results/syntax_errors/switch_missing_open_curly_brace.own
compile::stdout 0

compile::stderr 5
tests/inputs/syntax_errors/switch_missing_open_curly_brace.own:4:17:[1;31merror[0;39m:got token `newline`, but expected `{` after switch operand
     3 | fn main() i32 {
     4 |     switch token
       |                 ^
     5 |         case .num(num): break

compile::return_code 1

